--- a/locale/tr/LC_MESSAGES/django.po
+++ b/locale/tr/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-03-02 20:10+0400\n"
+"POT-Creation-Date: 2024-03-25 08:23+0400\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -18,43 +18,83 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
 
-#: .\core\models.py:28
+#: .\core\models.py:31
 msgid "Category"
-msgstr ""
+msgstr "Kategori"
 
-#: .\core\models.py:29
+#: .\core\models.py:32
 msgid "Categories"
-msgstr ""
+msgstr "Kategoriler"
 
-#: .\core\models.py:40
+#: .\core\models.py:45
 msgid "Color"
-msgstr ""
+msgstr "Renk"
 
-#: .\core\models.py:41
+#: .\core\models.py:46
 msgid "Colors"
-msgstr ""
+msgstr "Renkler"
 
-#: .\core\models.py:57
+#: .\core\models.py:63
 msgid "Product"
-msgstr ""
+msgstr "Urun"
 
-#: .\core\models.py:58
+#: .\core\models.py:64
 msgid "Products"
-msgstr ""
+msgstr "Urunler"
 
-#: .\core\templates\contact.html:13
-msgid "Contact Us"
-msgstr "ELaqe saxla"
+#: .\core\models.py:85
+msgid "Blog"
+msgstr "Blog"
 
-#: .\malefashion\settings.py:137
+#: .\core\models.py:86
+msgid "Blogs"
+msgstr "Bloglar"
+
+#: .\core\models.py:120
+msgid "Contact"
+msgstr "Kontakt"
+
+#: .\core\models.py:121
+msgid "Contacts"
+msgstr "Kontaktlar"
+
+#: .\core\models.py:141
+msgid "Setting"
+msgstr "Ayar"
+
+#: .\core\models.py:142
+msgid "Settings"
+msgstr "Ayarlar"
+
+#: .\core\models.py:155 .\core\models.py:156
+msgid "ContactUs"
+msgstr "Bize ulashin"
+
+#: .\core\templates\index.html:42
+msgid "Free Delivery"
+msgstr "tr tercume"
+
+#: .\core\templates\index.html:44
+msgid "Shall open divide a one"
+msgstr "tr tercume"
+
+#: .\core\templates\index.html:52
+msgid "Alway support"
+msgstr "tr tercume"
+
+#: .\core\templates\index.html:78
+msgid "Featured product"
+msgstr "tr tercume"
+
+#: .\malefashion\settings.py:139
 msgid "Azerbaijani"
 msgstr ""
 
-#: .\malefashion\settings.py:138
+#: .\malefashion\settings.py:140
 msgid "English"
 msgstr ""
 
-#: .\malefashion\settings.py:139
+#: .\malefashion\settings.py:141
 msgid "Turkish"
 msgstr ""
 
